       Canon PIXMA MP495
       Canon PIXMA MP520
       Canon PIXMA MP540
       Canon PIXMA MP550
       Canon PIXMA MP600
       Canon PIXMA MP950
       Canon PIXMA MP960
       Canon PIXMA MP990
       Canon PIXMA MX300 (EXPERIMENTAL)
       Canon PIXMA MX310 (EXPERIMENTAL)
       Canon PIXMA MX330 (EXPERIMENTAL)
       Canon PIXMA MX340 (EXPERIMENTAL)
       Canon PIXMA MX350 (EXPERIMENTAL)
       Canon PIXMA MX420 (EXPERIMENTAL)
       Canon PIXMA MX700 (EXPERIMENTAL)
       Canon PIXMA MX850 (EXPERIMENTAL)
       Canon PIXMA MX860 (EXPERIMENTAL)
       Canon PIXMA MX870 (EXPERIMENTAL)
       Canon PIXMA MX880 (EXPERIMENTAL)
       Canon PIXMA MX7600 (EXPERIMENTAL)

     - Epson inkjet printers:

       EPSON B-310
       EPSON B-310N
       EPSON B-510DN
       EPSON ME Office 600F
       EPSON ME Office 620F
       Epson Stylus Photo R3000 (EXPERIMENTAL)
       Epson Stylus Pro 3885
       Epson Stylus Pro 4000 (EXPERIMENTAL)
       Epson Stylus Pro 4450 (EXPERIMENTAL)
       Epson Stylus Pro 7700 (EXPERIMENTAL)
       Epson Stylus Pro 7890 (EXPERIMENTAL)
       Epson Stylus Pro 9700 (EXPERIMENTAL)
       Epson Stylus Pro 9890 (EXPERIMENTAL)

     - Dye sublimation printers:

       Kodak EasyShare G600 Printer Dock
       Kodak PD-4000
       Kodak PD-6000
       Kodak Photo Printer
       Kodak Photo Printer 500
       Kodak Printer Dock Plus
       Kodak Printer Dock Plus S3

  2) Add additional photo modes to Canon inkjet printers.

  3) Correct page size limit for EPSON Stylus Pro 7600, 7800, 7880,
     9600, 9800, and 9880 (previously these printers had overly
     restrictive page limits).

  4) Correct printing to the EPSON Stylus NX200, NX215, SX200, SX205,
     SX210, and SX215.

  5) Corrected basic printer definitions of EPSON Stylus Pro 3800,
     3880, 7800, and 9800.

  6) Corrected media definitions and improve printing quality for
     EPSON Stylus Pro 3800, 3880, 4800, 4880, 7800, 7880, 9800, 9880,