@@ -1287,8 +1287,22 @@ static const canon_cap_t canon_model_capabilities[] =
     8,
     &canon_MULTIPASS_MP170_slotlist, /* these models only have an auto sheet feeder also uses CAP_T */
     CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_P|CANON_CAP_T|CANON_CAP_I,0,control_cmd_MULTIPASS_MP150,  /*features */
-    &canon_MULTIPASS_MX330_modelist,
+    &canon_MULTIPASS_MX340_modelist,
     &canon_MULTIPASS_MX340_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
+  { /* Canon MULTIPASS MX360 -- with XML */
+    "PIXMA MX360", 3,          /*model, model_id*/
+    842, 17*72,       /* max paper width and height */
+    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
+    8,
+    &canon_MULTIPASS_MP250_slotlist, /* only rear tray also uses CAP_T */
+    CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_P|CANON_CAP_T|CANON_CAP_I|CANON_CAP_XML,0,control_cmd_MULTIPASS_MP150,  /*features */
+    &canon_MULTIPASS_MX360_modelist,
+    &canon_MULTIPASS_MX360_paperlist,
     NULL,
     NULL,
     NULL,
